# Hiereinterpret

./: README.md  corre_data.py  pyproject.toml  run_arr.py  run_arr_fo.py  run_arr_ig.py  run_hierarchical_importance.py
dataset/: 11730_23.csv  18735_23.csv  18736_21.csv  18738_21.csv  18738_23.csv  ARIMAX1_13900_17444_11730_23.xlsx  ARIMAX1_9771_12831_18736_21.xlsx  ARIMAX1_9771_17009_18738_21.xlsx  ARIMAX1_9771_17321_18738_23.xlsx  ARIMAX1_9771_7336_18735_23.xlsx  D1.csv  D2.csv  D3.csv  D4.csv  D5.csv
notebooks/: arima_first.ipynb  correlation_data.ipynb
src/interpretdow/: __init__.py  gen_arima.py  hierarchical_importance.py
