[project]
name = "interpretdow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "captum>=0.7.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.3",
    "torch>=2.4.1",
]

[dependency-groups]
dev = ["jupyter>=1.1.1"]
